# orb_slam3_ros2

./: .gitignore  .gitmodules  README.md  flake.nix  handoff-kiro.md  handoff.md  result_table.md  test_script5.sh  test_script6.sh  tf_audit.json  tracking_benchmark.json
.superpowers/sdd/: mapper-task-1-fix-report.md  task-2-report.md
docs/samples/lidar-rotation-center-calibration/: inplace-rotate-1rev-015rad-report.html  inplace-rotate-1rev-report.html
docs/superpowers/plans/: 2026-07-16-lidar-rotation-center-calibration.md  2026-07-17-orb-lidar-imu-deskew-p2.md  2026-07-17-orb-lidar-thin-walls-p0-p1.md  2026-07-17-stereo-rotation-center-calibration.md  (+13 more)
orb_lidar_mapper/: CMakeLists.txt  package.xml
orb_lidar_mapper/include/orb_lidar_mapper/: calibration_analysis.hpp  calibration_deskew.hpp  calibration_pipeline.hpp  calibration_report.hpp  calibration_types.hpp  imu_yaw_buffer.hpp  map_rebuilder.hpp  mapper_node.hpp  planar_icp.hpp  pose2.hpp  rotation_bag_reader.hpp  rotation_center_estimator.hpp  scan_deskewer.hpp  tiled_occupancy_grid.hpp  timed_pose_buffer.hpp  trajectory_store.hpp  wall_thickness.hpp
orb_lidar_mapper/src/: calibration_analysis.cpp  calibration_deskew.cpp  calibration_pipeline.cpp  calibration_report.cpp  imu_yaw_buffer.cpp  lidar_rotation_center_check.cpp  main.cpp  map_rebuilder.cpp  mapper_node.cpp  planar_icp.cpp  pose2.cpp  rotation_bag_reader.cpp  rotation_center_estimator.cpp  scan_deskewer.cpp  tiled_occupancy_grid.cpp  timed_pose_buffer.cpp  trajectory_store.cpp  wall_thickness.cpp
orb_lidar_mapper/test/: calibration_analysis_test.cpp  calibration_deskew_test.cpp  calibration_pipeline_test.cpp  calibration_report_test.cpp  imu_yaw_buffer_test.cpp  map_rebuilder_test.cpp  mapper_node_test.cpp  planar_icp_test.cpp  pose2_test.cpp  rotation_bag_reader_test.cpp  rotation_center_estimator_test.cpp  scan_deskewer_test.cpp  tiled_occupancy_grid_test.cpp  timed_pose_buffer_test.cpp  trajectory_store_test.cpp  wall_thickness_test.cpp
orb_slam3_msgs/: CMakeLists.txt  package.xml
orb_slam3_msgs/msg/: GraphSnapshot.msg  KeyframePose.msg  LoopEdge.msg  MapRevision.msg  RevisionedPath.msg  TrackedFrame.msg  TrackingEvent.msg
orb_slam3_vendor/: CMakeLists.txt  package.xml
orb_slam3_vendor/cmake/: orb_slam3_vendor-extras.cmake.in
orb_slam3_vendor/patches/: 0001-modern-headless-install.patch
orb_slam3_vendor/test/: gba_shutdown_test.cpp  loop_closing_notification_test.cpp  loop_revisit_policy_test.cpp  optimizer_essential_graph_safety_test.cpp  run_installed_consumer.cmake  snapshot_value_test.cpp  system_shutdown_test.cpp  vendor_link_test.cpp
orb_slam3_vendor/test/installed_consumer/: CMakeLists.txt  main.cpp
orb_slam3_wrapper/: CMakeLists.txt  package.xml
orb_slam3_wrapper/config/: tasterobot_stereo.yaml
orb_slam3_wrapper/include/orb_slam3_wrapper/: backend.hpp  calibration.hpp  graph_semantics.hpp  latest_image_worker.hpp  mount_xy_mapper.hpp  planar_pose_projector.hpp  pose_conversion.hpp  serial_publish_worker.hpp  stereo_bag_reader.hpp  stereo_calib_analysis.hpp  stereo_calib_pipeline.hpp  stereo_calib_report.hpp  stereo_calib_types.hpp  stereo_rotation_center.hpp  wrapper_node.hpp
orb_slam3_wrapper/src/: backend.cpp  calibration.cpp  graph_semantics.cpp  latest_image_worker.cpp  main.cpp  mount_xy_mapper.cpp  planar_pose_projector.cpp  pose_conversion.cpp  serial_publish_worker.cpp  stereo_bag_reader.cpp  stereo_calib_analysis.cpp  stereo_calib_pipeline.cpp  stereo_calib_report.cpp  stereo_rotation_center.cpp  stereo_rotation_center_check.cpp  wrapper_node.cpp
orb_slam3_wrapper/test/: backend_geometry_test.cpp  calibration_test.cpp  graph_semantics_test.cpp  latest_image_worker_test.cpp  mount_xy_mapper_test.cpp  planar_pose_projector_test.cpp  pose_conversion_test.cpp  stereo_bag_reader_test.cpp  stereo_calib_analysis_test.cpp  stereo_calib_pipeline_test.cpp  stereo_calib_report_test.cpp  stereo_rotation_center_test.cpp  wrapper_component_test.cpp
orb_slam_bringup/: package.xml  pytest.ini  setup.cfg  setup.py
orb_slam_bringup/config/: read_only_bridge.yaml  tasterobot_bag.yaml
orb_slam_bringup/launch/: bag_replay.launch.py  dashboard.launch.py
orb_slam_bringup/orb_slam_bringup/: dashboard_model.py  dashboard_server.py  loop_closure_evidence.py  metrics_recorder.py  odom_tf_adapter.py  report.py  tf_audit.py  tracking_benchmark.py  tracking_benchmark_probe.py
orb_slam_bringup/scripts/: verify_read_only_bridge.py
orb_slam_bringup/test/: test_bag_profile.py  test_dashboard_app.js  test_dashboard_model.py  test_dashboard_server.py  test_loop_closure_evidence.py  test_metrics.py  test_metrics_shutdown.py  test_odom_tf_adapter.py  test_report.py  test_tracking_benchmark.py
orb_slam_bringup/web/: app.js  index.html  style.css
orb_slam_dashboard/: CMakeLists.txt  package.xml
orb_slam_dashboard/orb_slam_dashboard/: server.py
orb_slam_dashboard/test/: dashboard.spec.ts
orb_slam_dashboard/web/: index.html  package-lock.json  package.json  playwright.calibration.config.ts  playwright.config.ts  playwright.direct.config.ts  tsconfig.json  vite.config.ts
orb_slam_dashboard/web/e2e/: direct-dashboard.spec.ts  lidar-calibration-report.spec.ts
orb_slam_dashboard/web/src/: App.tsx  foxglove.ts  main.ts  main.tsx  store.ts  styles.css  types.ts
orb_slam_dashboard/web/src/components/: EventList.tsx  HealthPanel.tsx  MapView.tsx  StatusBar.tsx  Timeline.tsx  TrackingImage.tsx
orb_slam_dashboard/web/src/render/: occupancy.ts  paths.ts  scan.ts
orb_slam_dashboard/web/test/: layout.test.tsx  map-render.test.tsx  store.test.ts
tools/: check_select.py  check_select.sh  check_select2.py  check_select3.py  check_select4.py  check_select5.py  check_select_args.sh  check_select_sh.sh  check_select_sh2.sh  check_select_sh3.sh  check_select_sh4.sh  check_select_sh5.sh  check_select_sh6.sh  eval_rates.py  eval_rates2.py  eval_rates3.py  run_circle_loop_closure_evaluation.sh  run_full_stack_dashboard.sh  run_lidar_rotation_center_calibration.sh  run_stereo_rotation_center_calibration.sh  run_tracking_performance_benchmark.sh
(+13 files in other folders)
