<?xml version="1.0"?>
<package format="3">
  <name>orb_lidar_mapper</name>
  <version>0.0.0</version>
  <description>Planar lidar mapping primitives for ORB-SLAM3.</description>
  <maintainer email="duc@todo.todo">duc</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
