cmake_minimum_required(VERSION 3.16)
project(orb_slam3_wrapper)
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_gtest REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(orb_slam3_vendor REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(orb_slam3_msgs REQUIRED)
find_package(OpenCV REQUIRED)
find_package(rclcpp REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(diagnostic_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(ament_index_cpp REQUIRED)
find_package(message_filters REQUIRED)

add_library(orb_slam3_wrapper_core src/calibration.cpp src/pose_conversion.cpp src/backend.cpp src/graph_semantics.cpp src/latest_image_worker.cpp src/wrapper_node.cpp)
target_include_directories(orb_slam3_wrapper_core PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
ament_target_dependencies(orb_slam3_wrapper_core sensor_msgs orb_slam3_msgs rclcpp cv_bridge diagnostic_msgs geometry_msgs nav_msgs tf2 tf2_ros visualization_msgs std_msgs ament_index_cpp message_filters)
target_link_libraries(orb_slam3_wrapper_core ORB_SLAM3::ORB_SLAM3 Eigen3::Eigen)

add_library(orb_slam3_wrapper_stereo_calib
  src/stereo_rotation_center.cpp
  src/planar_pose_projector.cpp
  src/mount_xy_mapper.cpp
  src/stereo_calib_analysis.cpp)
target_include_directories(orb_slam3_wrapper_stereo_calib PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries(orb_slam3_wrapper_stereo_calib PUBLIC Eigen3::Eigen)

ament_add_gtest(stereo_rotation_center_test test/stereo_rotation_center_test.cpp)
target_link_libraries(stereo_rotation_center_test orb_slam3_wrapper_stereo_calib)

ament_add_gtest(planar_pose_projector_test test/planar_pose_projector_test.cpp)
target_link_libraries(planar_pose_projector_test orb_slam3_wrapper_stereo_calib)

ament_add_gtest(mount_xy_mapper_test test/mount_xy_mapper_test.cpp)
target_link_libraries(mount_xy_mapper_test orb_slam3_wrapper_stereo_calib)

ament_add_gtest(stereo_calib_analysis_test test/stereo_calib_analysis_test.cpp)
target_link_libraries(stereo_calib_analysis_test orb_slam3_wrapper_stereo_calib)

ament_add_gtest(calibration_test test/calibration_test.cpp)
target_include_directories(calibration_test PRIVATE include)
ament_target_dependencies(calibration_test sensor_msgs)
target_link_libraries(calibration_test orb_slam3_wrapper_core)

ament_add_gtest(pose_conversion_test test/pose_conversion_test.cpp)
target_include_directories(pose_conversion_test PRIVATE include)
ament_target_dependencies(pose_conversion_test orb_slam3_vendor)
target_link_libraries(pose_conversion_test orb_slam3_wrapper_core)

ament_add_gtest(graph_semantics_test test/graph_semantics_test.cpp)
target_include_directories(graph_semantics_test PRIVATE include)
ament_target_dependencies(graph_semantics_test orb_slam3_msgs orb_slam3_vendor)
target_link_libraries(graph_semantics_test orb_slam3_wrapper_core)

ament_add_gtest(latest_image_worker_test test/latest_image_worker_test.cpp)
target_include_directories(latest_image_worker_test PRIVATE include)
ament_target_dependencies(latest_image_worker_test orb_slam3_vendor)
target_link_libraries(latest_image_worker_test orb_slam3_wrapper_core)

ament_add_gtest(wrapper_component_test test/wrapper_component_test.cpp)
target_include_directories(wrapper_component_test PRIVATE include)
ament_target_dependencies(wrapper_component_test rclcpp sensor_msgs orb_slam3_msgs)
target_link_libraries(wrapper_component_test orb_slam3_wrapper_core)

ament_add_gtest(backend_geometry_test test/backend_geometry_test.cpp)
target_include_directories(backend_geometry_test PRIVATE include)
ament_target_dependencies(backend_geometry_test orb_slam3_vendor)
target_link_libraries(backend_geometry_test orb_slam3_wrapper_core)

install(TARGETS orb_slam3_wrapper_core EXPORT orb_slam3_wrapper_targets)
add_executable(orb_slam3_wrapper_node src/main.cpp)
target_link_libraries(orb_slam3_wrapper_node orb_slam3_wrapper_core)
ament_target_dependencies(orb_slam3_wrapper_node rclcpp)
install(TARGETS orb_slam3_wrapper_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include)
install(DIRECTORY config/ DESTINATION share/${PROJECT_NAME}/config)
ament_export_targets(orb_slam3_wrapper_targets HAS_LIBRARY_TARGET)
ament_export_dependencies(Eigen3 orb_slam3_vendor sensor_msgs orb_slam3_msgs rclcpp cv_bridge diagnostic_msgs geometry_msgs nav_msgs tf2 tf2_ros visualization_msgs std_msgs ament_index_cpp message_filters)
ament_package()
