<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3_wrapper</name>
  <version>1.0.0</version>
  <description>ROS 2 wrapper foundation for ORB-SLAM3.</description>
  <maintainer email="duc@example.com">duc</maintainer>
  <license>GPL-3.0-or-later</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>orb_slam3_vendor</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
