<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam_dashboard</name>
  <version>0.0.0</version>
  <description>Read-only browser dashboard for ORB-SLAM3 lidar mapping streams.</description>
  <maintainer email="duc@todo.todo">duc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
